--- a/style/scss/all.scss
+++ b/style/scss/all.scss
@@ -1,13 +1,20 @@
 @import "varibles";
 @import "mixin";
+.word_orange{color: #EF7E00;}
 .wrap {
 	width: 100%;
 	height: 100%;
 	font-size: 20px;
 	padding-top: 70px;
-	
+
 	@include w768px{
 		padding-top: 55px;
+	}
+}
+
+@include w768px{
+	.br_768{
+		display: block;
 	}
 }
 .info_box {
@@ -67,6 +74,7 @@
 	padding: 0 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	background: #fff;
+	z-index: 10;
 	.logo {
 		width: 185px;
 		height: 50px;
@@ -221,19 +229,12 @@
 	position: relative;
 	width: 100%;
 	height: calc( 100vh - 70px);
-	// padding-bottom: calc(80% * 0.56);
 	background: url('../../images/banner_bg.jpg')no-repeat center/cover;
 	.banner_info{
-		position: absolute;
-		top: 80px;
-		left: 170px;
-		img{
-			width: 40%;
-		}
-		@include w1440px{
-			img{
-				width: 38%;
-			}
+		@include absolute(80px ,0,0,170px);
+		.pic{
+			width: 25%;
+			max-width: 315px;
 		}
 	}
 	.banner_txt{
@@ -252,29 +253,15 @@
 			margin-left: 5px;
 		}
 		.p2{
-			text-align: center;
 			font-size: 36px;
 			color: #867976;
 			letter-spacing: 0.16em;
 			margin-top: 5px;
 		}
-		@include w1440px{
-			.p1,
-			.s1{
-				font-size: 50px;
-			
-			}
-			.p2{
-				font-size: 34px;
-			}
-		}
 	}
 	.banner_scoll{
-		position: absolute;
+		@include absolute(auto , 0 , 20% , 0);
 		text-align: center;
-		left: 0;
-		right: 0;
-		bottom: 20%;
 		margin: 0 auto;
 		font-size: 36px;
 		color: rgba(255,255,255,.8);
@@ -285,13 +272,27 @@
 			content:'';
 			display: block;
 			position: absolute;
+			@include absolute(calc(100% + 15px) , 0 , auto , 0);
 			width: 35px;
 			height: 21px;
 			background: url('../../images/icon_down_w.svg')no-repeat center/contain;
-			top: calc(100% + 15px);
-			left: 0;
-			right: 0;
 			margin: 0 auto ;
+		}
+	}
+	@include w1440px{
+		.banner_info{
+			.pic{
+				width: 38%;
+			}
+		}
+		.banner_txt{
+			.p1,
+			.s1{
+				font-size: 50px;
+			}
+			.p2{
+				font-size: 34px;
+			}
 		}
 	}
 	@include w1024px{
@@ -311,6 +312,26 @@
 			}
 		}
 	}
+	@include w768px{
+		.banner_info{
+			left: 0;
+			right: 0;
+			margin: auto;
+			.pic{
+				margin: auto;
+				width: 230px;
+			}
+		}
+		.banner_txt{
+			text-align: center;
+			.p2{
+				text-align: center;
+			}
+		}
+		.banner_scoll{
+			bottom: 30%;
+		}
+	}
 }
 .date_block {
 	position: absolute;
@@ -319,7 +340,6 @@
 	bottom: 0;
 	background: linear-gradient(180deg, rgba(255, 255, 255, 0.72) 12.5%, rgba(255, 255, 255, 0.9) 34.69%);
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 	ul{
 		display: flex;
 		justify-content: space-between;
@@ -336,7 +356,6 @@
 		display: block;
 		font-size: 20px;
 	}
-
 	.icon_clock::before{
 		content:'';
 		display: block;
@@ -359,7 +378,6 @@
 			margin-bottom: 5px;
 		}
 	}
-
 	@include w1440px{
 		ul{
 			padding: 0 35px;
@@ -389,6 +407,36 @@
 			padding: 0 15px;
 		}
 	}
+	@include w768px{
+		ul{
+			flex-wrap: wrap;
+			padding-bottom: 15px;
+		}
+		li{
+			width: calc(100% / 3);
+			margin-top: 15px;
+			font-size: 12px;
+
+		}
+		.icon_clock:before{
+			width: 14px;
+			height: 14px;
+			margin-right: 5px;
+		}
+		.date_num {
+			font-size: 28px;
+			line-height: 40px;
+			&:after{
+				font-size: 12px;
+				line-height: 2;
+			}
+		}
+		.br{
+			tt{
+				font-size: 12px;
+			}
+		}
+	}
 }
 
 .flyer{
@@ -396,7 +444,10 @@
 	height: calc(100vh - 70px);
 	background: url('../../images/flyer/bg_flyer.png')no-repeat right bottom/contain,
 	linear-gradient(90deg, #FFF3E6 -2.34%, #FFFFFF 50.96%, #FFFFFF 98.93%);
-
+	.info_box{
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 	.flyer_box {
 		max-width: 510px;
 		height: calc(100% - 80px - 110px);
@@ -467,7 +518,7 @@
 			left: 20px;
 			background: url('../../images/icon_prev.svg')no-repeat center/cover;
 		}
-		
+
 		.flyer_next {
 			right: 20px;
 			background: url('../../images/icon_next.svg')no-repeat center/cover;
@@ -508,6 +559,26 @@
 			margin: auto;
 		}
 	}
+	@include w768px{
+		.info_box{
+			padding: 25px 0 0 0;
+		}
+		.flyer_box{
+			max-width: none;
+			height: calc(100% - 80px - 70px);
+		}
+		.flyer_group{
+			margin-bottom: 0;
+		}
+		.flyer_menu{
+			display: none;
+		}
+		.flyer_item{
+			display: block;
+			flex: none;
+			width: 70%;
+		}
+	}
 }
 
 .leaderboard{
@@ -521,7 +592,7 @@
 		overflow: hidden;
 		margin: auto;
 		padding-bottom: 40px;
-		
+
 		.pic{
 			display: flex;
 			width: 100%;
@@ -533,7 +604,6 @@
 			margin: 0 30px;
 		}
 	}
-	
 	.dots{
 		display: flex;
 		width: 100%;
@@ -549,7 +619,24 @@
 			background: #FFB057;
 		}
 	}
+	@include w768px{
+		background-size: cover;
+		.leaderboard_box{
+			ul{
+				overflow-x: auto;
+				overflow-y: hidden;
+			}
+			li{
+				width: 40%;
+				margin:0 0 0 14px;
+			}
+		}
+		.dots{
+			display: none;
+		}
+	}
 }
+
 .school{
 	width: 100%;
 	background: url('../../images/school/bg_school.jpg')no-repeat right bottom/contain;
@@ -564,7 +651,7 @@
 	}
 	.school_name{
 		margin-bottom: 40px;
-		ul{
+		.school_first_menu{
 			display: flex;
 			flex-wrap: wrap;
 		}
@@ -574,21 +661,11 @@
 			font-size: 20px;
 			font-weight: 700;
 			border-right: 2px solid #C4C4C4;
+			white-space: nowrap;
 			&:last-child{
 				border-right: none;
 			}
-			&::after{
-				content:'\25BA';
-				position: absolute;
-				left: 80%;
-				width: 18px;
-				height: 18px;
-				font-size: 16px;
-				top: 0;
-				bottom: 0;
-				margin: auto 0;
-				color: #FFB057;
-			}
+
 			@include w1280px{
 				width: calc(100% / 3 - 50px);
 				margin: 10px;
@@ -599,6 +676,40 @@
 			@include w1024px{
 				padding: 2px 40px 2px 20px;
 			}
+		}
+		span{
+			position: relative;
+		}
+		span::after{
+			content:'\25BA';
+			position: absolute;
+			left: calc(100% + 10px);
+			width: 18px;
+			height: 18px;
+			font-size: 16px;
+			top: 0;
+			bottom: 0;
+			margin: auto 0;
+			color: #FFB057;
+		}
+	}
+	.school_second_menu{
+		display: none;
+		position: absolute;
+		width: 100%;
+		top: calc(100% + 5px);
+		left: 0;
+		background: rgba(44, 44, 44, 0.7);
+		z-index: 1;
+		li{
+			width: 100%;
+			border: none;
+			color: #fff;
+			text-align: center;
+			padding: 10px 0;
+		}
+		span:after{
+			content:'';
 		}
 	}
 	.school_int{
@@ -627,7 +738,7 @@
 			background: rgba(239, 126, 0, .7);
 			display: block;
 			padding: 20px 40px;
-			
+
 			@include w1024px{
 				padding: 15px 20px;
 			}
@@ -664,7 +775,7 @@
 		li+li{
 			margin-top: 25px;
 		}
-			
+
 		@include w1024px{
 			li+li{
 				margin-top: 15px;
@@ -673,12 +784,14 @@
 		li:last-child{
 			text-align: right;
 		}
-		
+
 		@include w1024px{
 			padding: 15px 20px;
 		}
 	}
-	
+	.school_third_menu{
+		display: none;
+	}
 	@include w1440px{
 		.school_txt {
 			h1{
@@ -689,22 +802,101 @@
 			}
 		}
 	}
-	
+
 	@include w1024px{
 		.school_txt {
 			max-width: 370px;
 		}
 	}
+	@include w768px{
+		.info_box{
+			padding: 0;
+		}
+		.school_name{
+			margin-bottom: 0;
+			li{
+				width: 100%;
+				border-right: none;
+				text-align: center;
+				border-bottom: 1px solid #C4C4C4;
+				margin: 0;
+				padding: 0;
+			}
+			span{
+				display: inline-block;
+				padding: 11px 0;
+			}
+			span:after{
+				transform: rotate(90deg);
+			}
+		}
+		.school_int{
+			display: none;
+		}
+		.school_second_menu{
+			position: relative;
+			top: auto;
+			span{
+				padding: 10px 0 ;
+				font-size: 20px;
+				font-weight: 700;
+			}
+			span:after{
+				content:'';
+			}
+		}
+		.school_third_menu{
+			li:first-child{
+				background: #EF7E00;
+				display: flex;
+				padding: 10px 32px;
+				align-items: flex-end;
+				justify-content: center;
+				h1{
+					font-size: 30px;
+				}
+				h2{
+					font-size: 20px;
+					margin-left: 50px;
+				}
+			}
+			li:nth-child(2){
+				padding: 0;
+			}
+			li:nth-child(3){
+				padding: 14px 32px 30px;
+				background: url("../../images/school/bg_school.jpg") no-repeat right bottom/cover;
+				color: #2C2C2C;
+				display: flex;
+				flex-wrap: wrap;
+				div{
+					width: 100%;
+					text-align: left;
+				}
+				div::before{
+					content: attr(data-text);
+					flex: none;
+					align-self: flex-start;
+				}
+			}
+			
+		}
+	}
 }
 .video{
 	width: 100%;
+	height: calc(100vh - 70px);
 	.info_box{
+		height: 100%;
 		background: url('../../images/video/bg_video.jpg')no-repeat center/cover;
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 	.video_box{
 		width: 100%;
 		max-width: 990px;
-		margin: 0 auto 40px;
+		height: calc(100% - 80px - 110px);
+		margin: auto;
 	}
 	.video_play{
 		width: 100%;
@@ -737,11 +929,18 @@
 	.video_menu_box li+li{
 		margin-left: 15px;
 	}
+	@include w768px{
+		.video_menu{
+			display: none;
+		}
+	}
 }
 .news{
 	.info_box{
-		background: 
+		background:
 		url('../../images/bg_news.png')no-repeat center center/cover;
+		padding-left: 15px;
+		padding-right: 15px;
 	}
 	.news_box{
 		width: 100%;
@@ -759,6 +958,22 @@
 	}
 	.news_info{
 		border-bottom:1px solid #000;
+	}
+	@include w768px{
+		li{
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+		li+li{
+			margin-top: 26px;
+		}
+		.news_date{
+			display: block;
+			width: 100%;
+			text-align: center;
+			margin-bottom: 4px;
+		}
 	}
 }
 .about{
@@ -799,12 +1014,14 @@
 	.text_indent{
 		text-indent: 45px;
 	}
-	
+
 	@include w1024px{
 		justify-content: center;
 		.info_box{
 			width: 100%;
 			padding-bottom: 30px;
+			padding-left: 15px;
+			padding-right: 15px;
 		}
 		.pic{
 			width: 50%;
@@ -816,9 +1033,18 @@
 			background: transparent;
 		}
 	}
+	@include w768px{
+		.about_blod{
+			display: block;
+		}
+	}
 }
 .edu_link{
 	background: #E7E7E7;
+	.info_box{
+		padding-left: 15px;
+		padding-right: 15px;
+	}
 	.edu_group{
 		width: 100%;
 		max-width: 1110px;
@@ -833,6 +1059,15 @@
 			text-align: center;
 			line-height: 85px;
 			border-radius: 10px;
+		}
+	}
+	@include w768px{
+		.edu_group{
+			justify-content: center;
+			li{
+				width: 100%;
+				max-width: 318px;
+			}
 		}
 	}
 }
