--- a/style/scss/_mixin.scss
+++ b/style/scss/_mixin.scss
@@ -8,7 +8,6 @@
         @content;
     }
 }
-
 @mixin w1280px {
     @media screen and (max-width: 1280px){
         @content;
@@ -23,4 +22,16 @@
     @media screen and (max-width: 768px){
         @content;
     }
+}
+@mixin w576px {
+    @media screen and (max-width: 576px){
+        @content;
+    }
+}
+@mixin absolute($top , $right , $bottom , $left){
+    position : absolute;
+    top : $top;
+    right :$right;
+    bottom : $bottom;
+    left : $left;
 }
